[package]
name = "filedialogtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.21", features = ["thread-pool"] }
rfd = "0.8.2"
simple_logger = "2.1.0"
tinyfiledialogs = "3.9.1"
winit = { git = "https://github.com/kcking/winit" }
